2005-10-04  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Support direct named attribute lookkup, like FireFox,IE.
        This was causing a JavaScript exception for gap.com
        <rdar://problem/4285884> Gap.com throws exception "Undefined value" because of Safari doesn't support indexing into a named node map by name

        * khtml/ecma/kjs_dom.cpp:
        (KJS::DOMNodeList::getOwnPropertySlot): if cleanup
        (KJS::DOMNamedNodeMap::nameGetter):
        (KJS::DOMNamedNodeMap::getOwnPropertySlot):
        * khtml/ecma/kjs_dom.h: added nameGetter

2005-10-04  Eric Seidel  <eseidel@apple.com>

        No review, build fix only.

        Fix to include "config.h" in every file.
        Necessary to support fastMalloc.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5254

        * WebCore+SVG/DrawCanvasItem.mm:
        * WebCore+SVG/DrawDocument.mm:
        * WebCore+SVG/DrawView.mm:
        * WebCore+SVG/dom_kdomdocumentwrapper.cpp:
        * WebCore+SVG/dom_kdomnodetreewrapper.cpp:
        * WebCore+SVG/render_kcanvaswrapper.cpp:
        * WebCore+SVG/xml_kdomtokenizer.cpp:
        * kcanvas/KCanvas.cpp:
        * kcanvas/KCanvasContainer.cpp:
        * kcanvas/KCanvasCreator.cpp:
        * kcanvas/KCanvasFilters.cpp:
        * kcanvas/KCanvasImage.cpp:
        * kcanvas/KCanvasItem.cpp:
        * kcanvas/KCanvasMatrix.cpp:
        * kcanvas/KCanvasPath.cpp:
        * kcanvas/KCanvasRegistry.cpp:
        * kcanvas/KCanvasResources.cpp:
        * kcanvas/KCanvasTreeDebug.cpp:
        * kcanvas/KCanvasView.cpp:
        * kcanvas/device/KRenderingDevice.cpp:
        * kcanvas/device/KRenderingDeviceFactory.cpp:
        * kcanvas/device/KRenderingFillPainter.cpp:
        * kcanvas/device/KRenderingPaintServerGradient.cpp:
        * kcanvas/device/KRenderingPaintServerImage.cpp:
        * kcanvas/device/KRenderingPaintServerPattern.cpp:
        * kcanvas/device/KRenderingPaintServerSolid.cpp: